--- a/package.json
+++ b/package.json
@@ -9,27 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "^8.6.0",
     "buffer": "^6.0.3",
-    "expo": "^54.0.0",
+    "expo": "^54.0.31",
     "expo-asset": "~12.0.12",
+    "expo-blur": "~15.0.8",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
+    "expo-crypto": "^15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
+    "expo-haptics": "~15.0.8",
     "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-location": "~19.0.8",
     "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
     "jpeg-js": "^0.4.4",
     "onnxruntime-react-native": "1.17.0",
     "react": "19.1.0",
-    "react-native": "0.81.5",
+    "react-dom": "19.1.0",
+    "react-native": "^0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.1.10",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "@expo/fingerprint": "0.6.0"
   },
   "private": true
 }
